--- a/src/components/Section2.css
+++ b/src/components/Section2.css
@@ -3,28 +3,151 @@
     background-image: url("../assets/seasky.jpg");
     height: 100vh;
     width:100%;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
 }
+
 .contain {
     display:grid;
-    grid-template-columns: 33% 33% 33%;
-    justify-content: space-around;
+    border: 2px solid #44daf1;
+    grid-template-rows: 30vh 30vh 30vh;
+    grid-column-gap: 20px;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .card2 {
     display: grid;
     justify-content: space-evenly;
-    height: 70vh;
-    width: 33%;
+    height: 85%;
+    margin: 10px 0 0 10%;
+    width: 80%;
     background-color: rgba(47, 57, 61, 0.4);
-    margin: 10px;
-  }
+}
+
+.card2 ul {
+    list-style-type: none;
+}
 
 .inner-outline {
     outline: 2px solid #fdfcfc;
     outline-offset: -20px;
 }
+
+div.inner-outline h2 {
+    margin: auto;
+}
+div.inner-outline p {
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    padding:12px;
+    font-size: calc(10px + 6 * ((100vw - 600px) / 680))
+
+}
   
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 8px 12px;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #44daf1;
+    width: 80px;
+    height: 80px;
+  }
+
+  @media only screen and (min-width: 800px) { 
+    .contain {
+        position: relative;
+        top:5px;
+        display:grid;
+        border: 2px solid black;
+        grid-template-columns: 33% 33% 33%;
+        grid-column-gap: 20px;
+        justify-content: space-around;
+        
+    }
+    .card2 {
+        position: relative;
+        top:200px;
+        
+        display: grid;
+        height: calc(300px + 10vw);
+        width: 85%;
+        padding-right: calc(2vw- 20px);
+        background-color: rgba(47, 57, 61, 0.4);
+        transition: all .5s;
+        
+    }
+    .card3 {
+        position: relative;
+        top:200px;
+        
+        display: grid;
+        height: calc(300px + 10vw);
+        width: 85%;
+        padding-right: calc(2vw- 20px);
+        background-color: rgba(29, 240, 58, 0.4);
+        transition: all .5s;
+        
+    }
+    .card2:hover {
+        transform: scale(1.2);
+        background-color: rgba(47, 57, 61, 0.9);;
+    }
+    div.inner-outline h2 {
+        margin: auto;
+    }
+   div.inner-outline p {
+        text-align: center;
+        vertical-align: middle;
+        display: table-cell;
+        padding:12px;
+        font-size: calc(10px + 6 * ((100vw - 600px) / 680))
+
+    }
+    div.innerBox {
+        margin:20px;
+        border:1px solid red;
+    }
+    .numbertext {
+        color: #f2f2f2;
+        font-size: 16px;
+        font-weight: bold;
+        padding: 8px 12px;
+        position: relative;
+        bottom:-300px;
+        right: -1740px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: grid;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        background-color: #44daf1;
+        width: 80px;
+        height: 80px;
+      }
+    
+
+
+  }
