--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 .App {
   text-align: center;
 }
+html {
+  -webkit-box-sizing: border-box;
+   box-sizing: border-box;
+  font-size: 100%;
+  scroll-behavior: smooth;
+}
 
