--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -41,17 +41,18 @@
   nav img{
     position: relative;
     width:60px;
-    left:calc(100% -200px)
+    left:calc(100% - 30px)
   }
  
-  /*.logo {
+  .logo {
       position:fixed;
       left:15px;
       object-fit: contain;
       z-index: 2;
       padding-top: 4.3px;
+      width:60px;
 
-  }*/
+  }
 
   #showbar {
     position: absolute;
@@ -104,4 +105,66 @@
   
   #showbar.active {
     top: 0;
+  }
+
+  @media only screen and (min-width: 600px) { /*media query for any screen larger than mobile*/
+    .hamburger { 
+      display:none;
+    }
+    .close {
+      display: none; /* Hides the SVG hamburger/close buttons when browser window is bigger than mobile phone!*/
+    }
+
+    #showbar {
+      position: absolute;
+      width: 100%;
+      height: 70px;
+      background: rgb(50, 77, 117);
+      top:0;
+      
+    }
+    .navbar-links {
+      display: block;
+    }
+    #navbar ul  {
+      list-style: none;
+      color: white;
+      font-size: 20px;
+      margin: 0px 0 0 10vw;
+      display: flex;
+    }
+    
+    #navbar ul li {
+      list-style: none;
+      padding:25px 0 0 10px; /* top right bottom left */
+      margin: 0 0 0 10vw; /*top right bottom left */
+      
+    }
+    .navbar-links li a {
+      padding: 25px 1vw 0 2px;
+      font-size: calc(12px + 6 * ((100vw - 600px) / 680)) /* I included this to allow fluid typography */
+     
+   }
+   .navbar-links li a::before { /*Removes the mobile first vertical pseudo elements */
+     content:none;
+     border-radius: 10px;
+     background: #fff;
+     transition: all .1s;
+
+   }
+   .navbar-links li a::after{ /*pseudo element to create horizontal hover effect on navbar links */
+     content: "";
+     display:block;
+     width:0px;
+     height:2px;
+     border-radius: 10px;
+     background: #fff;
+     transition: all .3s;
+   }
+   .navbar-links li a:hover::after{
+     width:90%;
+   }
+   
+
+
   }
