--- a/src/components/Section1.css
+++ b/src/components/Section1.css
@@ -2,8 +2,42 @@
     background-image: url("../assets/boardwalkXL.jpg");
     height: 100vh;
     width:100%;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+ div.intro {
+    display: grid;
+    position: relative;
+    text-align: center;
+    top:100px;
+
+  }
+
+  div.intro  h1 {
+    font-size: calc(50px + 6 * ((100vw - 600px) / 680));
+    font-family: monospace;
+    color: #1b3d29
+    
+  }
+
+  div.intro h2 {
+    margin: calc(10px + 6 * ((100vw - 600px) / 680));
+    font-size: calc(20px + 6 * ((100vw - 600px) / 680));
+    font-family: monospace;
+    color: #112356
+    
+  }
+  div.intro h3 {
+    margin: 10px;
+    font-size: calc(15px + 6 * ((100vw - 600px) / 680));
+    font-family: monospace;
+    color: #112356
+
+    
+  }
+
+  
+
