--- a/src/components/Section2.css
+++ b/src/components/Section2.css
@@ -1,7 +1,7 @@
 #section2{
 
     background-image: url("../assets/seasky.jpg");
-    height: 100vh;
+    height: 110vh;
     width:100%;
     background-attachment: fixed;
     background-position: center;
@@ -27,6 +27,26 @@
     width: 80%;
     background-color: rgba(47, 57, 61, 0.4);
 }
+.card3 {
+    display: grid;
+    justify-content: space-evenly;
+    height: 85%;
+    margin: 10px 0 0 10%;
+    width: 80%;
+    background-color: rgba(29, 240, 58, 0.4);
+   
+    
+}
+.card4 {
+    display: grid;
+    justify-content: space-evenly;
+    height: 85%;
+    margin: 10px 0 0 10%;
+    width: 80%;
+    background-color: rgba(245, 165, 61, 0.4);
+    
+
+}
 
 .card2 ul {
     list-style-type: none;
@@ -38,6 +58,7 @@
 }
 
 div.inner-outline h2 {
+    padding: 10px;
     margin: auto;
 }
 div.inner-outline p {
@@ -77,7 +98,6 @@ div.inner-outline p {
         position: relative;
         top:5px;
         display:grid;
-        border: 2px solid black;
         grid-template-columns: 33% 33% 33%;
         grid-column-gap: 20px;
         justify-content: space-around;
