--- a/src/components/Section2.css
+++ b/src/components/Section2.css
@@ -194,19 +194,21 @@ div.bottomcarasol h2 {
     }
 }
 
+
+
 @media only screen and (max-height: 900px) { 
     div.bottomcarasol {
         position: relative;
         top:100px;
         width: 100%;
-        height: calc(700px - 8em);
+        height: calc(100% - 2em);
         padding: 12px;
         background-color: white;
         color: black;
         border: 2px solid grey;
         background: #cccccc;
         /* Fallback for older browsers without RGBA-support */
-        background: rgba(219, 208, 208, 0.7);
+        background: rgba(45, 216, 207, 0.7);
       }
     div.bottomcarasol p {
         color:black;
@@ -219,6 +221,35 @@ div.bottomcarasol h2 {
         text-align:left;
         padding:20px;
         font-size:calc(30px + 2* ((100vh - 600px) / 680))
+    }
+
+}
+
+@media only screen and (max-height: 600px) { 
+    div.bottomcarasol {
+        position: relative;
+        top:100px;
+        width: 100%;
+        height: calc(100% - 2em);
+        padding: 12px;
+        background-color: white;
+        color: black;
+        border: 2px solid grey;
+        background: #cccccc;
+        /* Fallback for older browsers without RGBA-support */
+        background: rgba(219, 208, 208, 0.7);
+      }
+    div.bottomcarasol p {
+        color:black;
+        text-align:left;
+        font-size:calc(10px + 2* ((100vh - 600px) / 680))
+    }
+
+    div.bottomcarasol h1 {
+        color:black;
+        text-align:left;
+        padding:20px;
+        font-size:calc(20px + 2* ((100vh - 600px) / 680))
     }
 
 }
