--- a/src/components/Section2.css
+++ b/src/components/Section2.css
@@ -8,6 +8,19 @@
     background-size: cover;
 
 }
+/* https://drive.google.com/file/d/1017I0Wr98aMIqDIt3H1kOuqw6kz6eg2H/view?usp=sharing*/
+#section2{
+    background-image: url("https://drive.google.com/uc?export=view&id=1017I0Wr98aMIqDIt3H1kOuqw6kz6eg2H");
+    height: 110vh;
+    width:100%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+
 
 .contain {
     display:grid;
