--- a/src/components/Section3.css
+++ b/src/components/Section3.css
@@ -13,9 +13,9 @@
 }
 #section3 img.l, img.r {
     position: relative;
-    width:90px;
-    height:90px;
-    z-index:22;
+    width:10vw;
+    height:10vw;
+    z-index:0;
 }
 
 #section3 img.l {
@@ -23,3 +23,14 @@
     -ms-transform: rotate(-180deg); 
     -webkit-transform: rotate(-180deg);
 }
+@media only screen and (min-width: 600px) { 
+    #section3 img.l, img.r {
+        position: relative;
+        width:90px;
+        height:90px;
+        z-index:0;
+    }
+    
+  
+  }
+  
