--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,24 +4,34 @@ footer {
     justify-content: center;
     align-items: left;
 }
-.leftLogo img  {
-    max-width: 100vw;
-    margin-left: 20vw;
+.leftLogo  {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0%;
+}
+
+.leftLogo img {
+    max-width: 50vw;
+    margin: 20px 20px 20px 50px;
 
 }
+.leftLogo span {
+    color:black;
+    margin:10px 20px 20px 100px;
+}
 .rightFoot {
-    max-width: 100px;
+    max-width:50vw;
 }
 .rightFoot img {
     max-width: 100vw;
   
-
+}
+.rightFoot a {
+    color:black;
 }
 
 @media only screen and (min-width: 600px) {
-    p {
-        color:aqua;
-    }
+
     .leftLogo {
         display: flex;
         flex-direction: column;
@@ -33,11 +43,12 @@ footer {
 
     footer {
         display:grid;
-        grid-template-columns: 100px 100px;
+        grid-template-columns: 50vw 50vw;
     }
 
     .rightFoot img {
-        max-width:50%;
+        max-width:50vw;
     }
+    
 
 }
