--- a/src/components/Section3.css
+++ b/src/components/Section3.css
@@ -11,12 +11,35 @@
     padding:10px;
     
 }
+#section3 div.btmCar{
+    border:2px solid teal;
+    height:80vh;
+    
+    
+}
+
+#section3 button.l {
+    display:block;
+    position: absolute;
+    top:500px;
+    left:80%;
+    z-index:10;
+}
+#section3 button.r {
+    display:block;
+    position:absolute;
+    top:500px;
+    right:0;
+
+}
 #section3 img.l, img.r {
     position: relative;
-    width:10vw;
-    height:10vw;
+    width:5vw;
+    height:5vw;
     z-index:0;
+    bottom:0px;
 }
+
 
 #section3 img.l {
     transform: rotate(-180deg);
@@ -24,8 +47,24 @@
     -webkit-transform: rotate(-180deg);
 }
 @media only screen and (min-width: 600px) { 
+
+    #section3 button.l {
+        display:block;
+        position: absolute;
+        top:500px;
+        left:60%;
+        z-index:10;
+    }
+    #section3 button.r {
+        display:block;
+        position:absolute;
+        top:500px;
+        right:0;
+    
+    }
     #section3 img.l, img.r {
         position: relative;
+        bottom:0px;
         width:90px;
         height:90px;
         z-index:0;
