--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,23 +11,30 @@ footer {
 }
 
 .leftLogo img {
-    max-width: 50vw;
-    margin: 20px 20px 20px 50px;
+    max-width: 20vw;
+    margin: 20px 20px 20px 30%;
 
 }
 .leftLogo span {
     color:black;
-    margin:10px 20px 20px 100px;
+    margin: 5px 20px 20px 100px;
 }
 .rightFoot {
     max-width:50vw;
 }
 .rightFoot img {
-    max-width: 100vw;
+    max-width: 90vw;
+    margin-top:100px;
   
 }
-.rightFoot a {
+.rightFootNav {
+    display: flex;
+}
+.rightFootNav a {
     color:black;
+    border:.5px solid black;
+    margin-top:10px;
+    
 }
 
 @media only screen and (min-width: 600px) {
