--- a/src/components/Section3.css
+++ b/src/components/Section3.css
@@ -19,26 +19,29 @@
 }
 
 #section3 button.l {
-    display:block;
+    display:inline;
     position: absolute;
     top:500px;
-    left:80%;
+    left: 0em;
     z-index:10;
 }
 #section3 button.r {
-    display:block;
+    display:inline;
     position:absolute;
     top:500px;
     right:0;
 
+
 }
 #section3 img.l, img.r {
     position: relative;
-    width:5vw;
-    height:5vw;
-    z-index:0;
+    width:calc(100px - 10vw);
+    height:calc(100px - 10vw);
+    z-index:10;
     bottom:0px;
+    transition: all 0.3s;
 }
+
 
 
 #section3 img.l {
@@ -46,20 +49,21 @@
     -ms-transform: rotate(-180deg); 
     -webkit-transform: rotate(-180deg);
 }
+
 @media only screen and (min-width: 600px) { 
 
     #section3 button.l {
         display:block;
         position: absolute;
         top:500px;
-        left:60%;
+        left:55%;
         z-index:10;
     }
     #section3 button.r {
         display:block;
         position:absolute;
         top:500px;
-        right:0;
+        right:0%;
     
     }
     #section3 img.l, img.r {
