--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,36 +1,36 @@
-footer {
+footer#jpcontact {
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: left;
 }
-.leftLogo  {
+.jpleftLogo  {
     display: flex;
     flex-direction: column;
     margin-left: 0%;
 }
 
-.leftLogo img {
-    max-width: 20vw;
+.jpleftLogo img {
+    max-width: 15vw;
     margin: 20px 20px 20px 30%;
 
 }
-.leftLogo span {
+.jpleftLogo span {
     color:black;
     margin: 5px 20px 20px 100px;
 }
-.rightFoot {
+.jprightFoot {
     max-width:50vw;
 }
-.rightFoot img {
+.jprightFoot img {
     max-width: 90vw;
     margin-top:100px;
   
 }
-.rightFootNav {
+.jprightFootNav {
     display: flex;
 }
-.rightFootNav a {
+.jprightFootNav a {
     color:black;
     border:.5px solid black;
     margin-top:10px;
@@ -39,21 +39,22 @@ footer {
 
 @media only screen and (min-width: 600px) {
 
-    .leftLogo {
-        display: flex;
-        flex-direction: column;
-    }
-    .leftLogo img  {
-        max-width: 50px;
-    
-    }
-
-    footer {
+    footer#jpcontact {
         display:grid;
         grid-template-columns: 50vw 50vw;
     }
 
-    .rightFoot img {
+    .jpleftLogo {
+        display: flex;
+        flex-direction: column;
+    }
+    .jpleftLogo img  {
+        max-width: 50px;
+    
+    }
+
+
+    .jprightFoot img {
         max-width:50vw;
     }
     
