--- a/src/components/Section3.css
+++ b/src/components/Section3.css
@@ -1,4 +1,4 @@
-#section3 {
+#jpsection3 {
     background-image: url("../assets/beach2.jpg");
     height: 100vh;
     width:100%;
@@ -7,25 +7,25 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-#section3.intro {
+.jpintro {
     padding:10px;
     
 }
-#section3 div.btmCar{
+#jpsection3 div.btmCar{
     border:2px solid teal;
     height:80vh;
     
     
 }
 
-#section3 button.l {
+#jpsection3 button.l {
     display:inline;
     position: absolute;
     top:500px;
     left: 0em;
     z-index:10;
 }
-#section3 button.r {
+#jpsection3 button.r {
     display:inline;
     position:absolute;
     top:500px;
@@ -33,7 +33,7 @@
 
 
 }
-#section3 img.l, img.r {
+#jpsection3 img.l, img.r {
     position: relative;
     width:calc(100px - 10vw);
     height:calc(100px - 10vw);
@@ -44,7 +44,7 @@
 
 
 
-#section3 img.l {
+#jpsection3 img.l {
     transform: rotate(-180deg);
     -ms-transform: rotate(-180deg); 
     -webkit-transform: rotate(-180deg);
@@ -52,21 +52,21 @@
 
 @media only screen and (min-width: 600px) { 
 
-    #section3 button.l {
+    #jpsection3 button.l {
         display:block;
         position: absolute;
         top:500px;
         left:55%;
         z-index:10;
     }
-    #section3 button.r {
+    #jpsection3 button.r {
         display:block;
         position:absolute;
         top:500px;
         right:0%;
     
     }
-    #section3 img.l, img.r {
+    #jpsection3 img.l, img.r {
         position: relative;
         bottom:0px;
         width:90px;
