--- a/src/components/Section2.css
+++ b/src/components/Section2.css
@@ -1,6 +1,6 @@
 /* https://drive.google.com/file/d/1017I0Wr98aMIqDIt3H1kOuqw6kz6eg2H/view?usp=sharing*/
 #section2{
-    background-image: url("https://drive.google.com/uc?export=view&id=1017I0Wr98aMIqDIt3H1kOuqw6kz6eg2H");
+    background-image: url("../assets/tan.jpg");
     height: 110vh;
     width:100%;
     background-attachment: fixed;
@@ -18,7 +18,7 @@
     align-items: center;
 }
 
-.card2 {
+.jpcard2 {
     display: grid;
     justify-content: space-evenly;
     height: 90%;
@@ -28,7 +28,7 @@
     width: 80%;
     background-color: rgba(47, 57, 61, 0.4);
 }
-.card3 {
+.jpcard3 {
     display: grid;
     justify-content: space-evenly;
     height: 90%;
@@ -39,7 +39,7 @@
    
     
 }
-.card4 {
+.jpcard4 {
     display: grid;
     justify-content: space-evenly;
     height: 90%;
@@ -51,7 +51,7 @@
 
 }
 
-.card2 ul {
+.jpcard2 ul {
     list-style-type: none;
 }
 
@@ -119,7 +119,7 @@ div.bottomcarasol h2 {
         justify-content: space-around;
         
     }
-    .card2 {
+    .jpcard2 {
         position: relative;
         top:200px;
         display: grid;
@@ -130,11 +130,11 @@ div.bottomcarasol h2 {
         transition: all .5s;
         
     }
-    .card2:hover {
+    .jpcard2:hover {
         transform: scale(1.2);
         background-color: rgba(47, 57, 61, 0.9);;
     }
-    .card3 {
+    .jpcard3 {
         position: relative;
         top:200px;
         display: grid;
@@ -145,11 +145,11 @@ div.bottomcarasol h2 {
         transition: all .5s;
         
     }
-    .card3:hover {
+    .jpcard3:hover {
         transform: scale(1.2);
         background-color:rgba(29, 240, 58, 0.9);
     }
-    .card4 {
+    .jpcard4 {
         position: relative;
         top:200px;
         display: grid;
@@ -159,7 +159,7 @@ div.bottomcarasol h2 {
         background-color: rgba(245, 165, 61, 0.4);
         transition: all .5s;
     }
-    .card4:hover {
+    .jpcard4:hover {
         transform: scale(1.2);
         background-color:rgba(245, 165, 61, 0.9);
     }
